--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,5 +1,14 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<a href="/celebrities"> View Celebrities </a>
-<p></p>
-<a href="/movies"> View Movies </a>
+<p>Welcome to the homepage</p>
+
+  <a href="/signup">Signup</a>
+  <p></p>
+  <a href="/login">Login</a>
+  <p></p>
+  <a href="/profile">Profile</a>
+  <p></p>
+
+  <a href="/celebrities"> View Celebrities </a>
+  <p></p>
+  <a href="/movies"> View Movies </a>
+  <p></p>
