--- a/starter-code/views/movies/new.hbs
+++ b/starter-code/views/movies/new.hbs
@@ -3,12 +3,12 @@
 <form action="/movies/create-new-movie" method="POST">
 
   <label>Title</label>
-  <input name="name" type="text">
+  <input name="title" type="text">
 
   <label>Genre</label>
   <input name="genre" type="text">
 
-  <label>Plote</label>
+  <label>Plot</label>
   <input name="plot" type="text">
 
   <button> Save </button>
